# commitly

./: CMakeLists.txt  LICENSE  README.md  TODO.md  changelog.json  package-lock.json  package.json  vite.config.ts
.github/: CONTRIBUTING.md  copilot-instructions.md  pull_request_template.md  release-notes-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/agents/: deskocat.agent.md  electron-upgrader.agent.md
.github/codeql/: codeql-config.yml
.github/skills/testing/: SKILL.md
.github/skills/update-git/: SKILL.md
.github/workflows/: ci.yml
app/: package.json  webpack.common.ts
app/src/cli/: main.ts
app/src/crash/: crash-app.tsx
app/src/lib/: app-state.ts  auth.ts  copilot-commit-message.ts  copilot-conflict-context.ts  copilot-conflict-resolution.ts  find-toast-activator-clsid.ts  resolve-git-proxy.ts  squirrel-error-parser.ts
app/src/lib/copilot/: byok.ts
app/src/lib/editors/: launch.ts
app/src/lib/git/: config.ts  core.ts  log.ts
app/src/lib/helpers/: default-branch.ts
app/src/lib/hooks/: hooks-proxy.ts
app/src/lib/ssh/: ssh-credential-storage.ts
app/src/lib/stores/: accounts-store.ts  app-store.ts  copilot-store.ts  git-store.ts
app/src/lib/trampoline/: trampoline-environment.ts
app/src/main-process/: same-origin-filter.ts  show-uncaught-exception.ts  squirrel-updater.ts
app/src/main-process/menu/: build-default-menu.ts
app/src/models/: formatting-preferences.ts  menu-ids.ts  status.ts
app/src/ui/: move-to-applications-folder.tsx
app/src/ui/about/: about.tsx
app/src/ui/acknowledgements/: acknowledgements.tsx
app/src/ui/banners/: update-available.tsx
app/src/ui/branches/: branch-list-item.tsx
app/static/: index.html
app/static/common/: pretext-draft.md
app/static/win32/: commitly.bat  commitly.sh
app/styles/ui/: _copilot-preferences.scss  _dialog.scss  _preferences.scss
app/test/e2e/: app-launch.e2e.ts  e2e-fixtures.ts  test-helpers.ts
app/test/unit/: copilot-byok-test.ts  copilot-conflict-context-test.ts
compiler/: go.mod  main.go
compiler/codegen/: emitter.go
compiler/lexer/: lexer.go  token.go
compiler/parser/: ast.go  parser.go
compiler/sema/: checker.go
compiler/vm/: vm.go
docs/: README.md  architecture.md  installation.md  known-issues.md
docs/contributing/: engineering-values.md  linting.md  linux-testing-and-you.md  setup-linux.md  setup-macos.md  setup-windows.md  setup.md  tooling.md  troubleshooting.md  upgrading-dependencies.md
docs/integrations/: azure-devops.md  bitbucket.md  gitlab.md
docs/learn-more/: unreachable-commits.md
docs/process/: labels.md  metrics.md  release-planning.md  roadmap.md  teams.md  testing.md  what-is-desktop.md
docs/technical/: button-order.md  editor-integration.md  feature-flagging.md  future-repository-structure.md  oauth.md  packaging.md  placeholders.md  proxies.md  pull-requests.md  rebase-flow.md  shell-integration.md  syntax-highlighting.md  ui-component-testing.md  windows-menu-bar.md
eslint-rules/: README.md  react-no-unbound-dispatcher-props.js  react-readonly-props-and-state.js
native/: .gitignore  CMakeLists.txt  Cargo.toml
native/cmake/: CPackConfig.cmake  QtDeploy.cmake
native/crates/commitly-core/: Cargo.toml  build.rs  build_log.txt
native/crates/commitly-core/src/: error.rs  ffi.rs  lib.rs  models.rs
native/crates/commitly-core/src/git/: branch.rs  clone.rs  commit.rs  diff.rs  log.rs  mod.rs  remote.rs  stash.rs  status.rs  tag.rs
native/crates/commitly-core/src/github/: api.rs
native/crates/commitly-core/src/vm/: mod.rs
native/crates/commitly-core/tests/: git_integration.rs
native/src/: branch_panel.cpp  branch_panel.h  changes_panel.cpp  changes_panel.h  clone_dialog.cpp  clone_dialog.h  commit_widget.cpp  commit_widget.h  diff_viewer.cpp  diff_viewer.h  git_worker.h  history_panel.cpp  history_panel.h  main.cpp  mainwindow.cpp  mainwindow.h  preferences_dialog.cpp  preferences_dialog.h  repository_list_panel.cpp  repository_list_panel.h  signin_dialog.cpp  signin_dialog.h  stash_panel.cpp  stash_panel.h  theme.h  toolbar_widget.cpp  toolbar_widget.h
script/: build.ts  dist-info.ts  info.plist  validate-electron-version.ts  validate-macos-version.ts
src/: App.css  App.tsx  changestab.cpp  changestab.h  commitdetailview.cpp  commitdetailview.h  diffviewer.cpp  diffviewer.h  historytab.cpp  historytab.h  main.cpp  mainwindow.cpp  mainwindow.h  mockdata.cpp  mockdata.h  models.h  sidebar.cpp  sidebar.h  syncheader.cpp  syncheader.h  titlebar.cpp  titlebar.h
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tools/: compile.py
(+36 files in other folders)
