[package]
name        = "commitly-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name      = "commitly_core"
crate-type = ["staticlib", "rlib"]

[dependencies]
git2      = { version = "0.19", features = ["vendored-openssl"] }
reqwest   = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde     = { version = "1",  features = ["derive"] }
serde_json = "1"
tokio     = { version = "1",  features = ["rt-multi-thread", "macros"] }
cxx       = "1"
thiserror = "1"
chrono    = { version = "0.4", features = ["serde"] }
url       = "2"
hex       = "0.4"

[build-dependencies]
cxx-build = "1"

[dev-dependencies]
tempfile  = "3"
